--- a/TEST_DIR/test_Exception/test/test.vcproj
+++ b/TEST_DIR/test_Exception/test/test.vcproj
@@ -174,6 +174,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\MaxiDump.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\stdafx.cpp"
 				>
 				<FileConfiguration
@@ -199,6 +203,10 @@
 			</File>
 			<File
 				RelativePath=".\test2.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\test3.cpp"
 				>
 			</File>
 		</Filter>
