--- a/network/netdetective_server/netdetective_server/netdetective_server.vcproj
+++ b/network/netdetective_server/netdetective_server/netdetective_server.vcproj
@@ -63,6 +63,7 @@
 				Name="VCLinkerTool"
 				OutputFile="$(SolutionDir)bin\$(ProjectName).exe"
 				LinkIncremental="2"
+				AdditionalLibraryDirectories="$(SolutionDir)third_party\iconv"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				TargetMachine="1"
@@ -318,6 +319,14 @@
 					>
 				</File>
 			</Filter>
+			<Filter
+				Name="iconv"
+				>
+				<File
+					RelativePath="..\third_party\iconv\IconvHelp.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="global"
@@ -332,6 +341,14 @@
 			</File>
 			<File
 				RelativePath="..\global\comm_protocol.h"
+				>
+			</File>
+			<File
+				RelativePath="..\global\ExpRptHandler.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\global\ExpRptHandler.h"
 				>
 			</File>
 			<File
