--- a/TEST_DIR/test_ThreadPool/test/test.vcproj
+++ b/TEST_DIR/test_ThreadPool/test/test.vcproj
@@ -211,16 +211,36 @@
 				RelativePath=".\targetver.h"
 				>
 			</File>
-			<File
-				RelativePath=".\ThreadPool.h"
-				>
-			</File>
 		</Filter>
 		<Filter
 			Name="资源文件"
 			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav"
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
 			>
+		</Filter>
+		<Filter
+			Name="common"
+			>
+			<File
+				RelativePath=".\ThreadPool.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\ThreadPool.h"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="global"
+			>
+			<File
+				RelativePath=".\testThreadPool.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\testThreadPool.h"
+				>
+			</File>
 		</Filter>
 		<File
 			RelativePath=".\ReadMe.txt"
