--- a/ATL/COM例子/Learn/com_lean4/com_lean4/com_lean4.vcproj
+++ b/ATL/COM例子/Learn/com_lean4/com_lean4/com_lean4.vcproj
@@ -21,8 +21,8 @@
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory="$(ConfigurationName)"
-			IntermediateDirectory="$(ConfigurationName)"
+			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
+			IntermediateDirectory="$(SolutionDir)$(ConfigurationName)/obj"
 			ConfigurationType="2"
 			UseOfATL="2"
 			ATLMinimizesCRunTimeLibraryUsage="false"
@@ -80,6 +80,7 @@
 				Name="VCLinkerTool"
 				RegisterOutput="true"
 				IgnoreImportLibrary="true"
+				OutputFile="$(SolutionDir)\bin\$(ProjectName).dll"
 				LinkIncremental="2"
 				ModuleDefinitionFile=".\com_lean4.def"
 				GenerateDebugInformation="true"
@@ -110,8 +111,8 @@
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory="$(ConfigurationName)"
-			IntermediateDirectory="$(ConfigurationName)"
+			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
+			IntermediateDirectory="$(SolutionDir)$(ConfigurationName)/obj"
 			ConfigurationType="2"
 			UseOfATL="2"
 			ATLMinimizesCRunTimeLibraryUsage="false"
@@ -167,6 +168,7 @@
 				Name="VCLinkerTool"
 				RegisterOutput="true"
 				IgnoreImportLibrary="true"
+				OutputFile="$(SolutionDir)\bin\$(ProjectName).dll"
 				LinkIncremental="1"
 				ModuleDefinitionFile=".\com_lean4.def"
 				GenerateDebugInformation="true"
@@ -435,6 +437,10 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath=".\HelloSimpleObject.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\stdafx.cpp"
 				>
 				<FileConfiguration
@@ -481,6 +487,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\HelloSimpleObject.h"
+				>
+			</File>
+			<File
 				RelativePath=".\Resource.h"
 				>
 			</File>
@@ -504,6 +514,10 @@
 			</File>
 			<File
 				RelativePath=".\com_lean4.rgs"
+				>
+			</File>
+			<File
+				RelativePath=".\HelloSimpleObject.rgs"
 				>
 			</File>
 		</Filter>
@@ -558,6 +572,11 @@
 		</Filter>
 		<File
 			RelativePath=".\ReadMe.txt"
+			>
+		</File>
+		<File
+			RelativePath=".\testCom.htm"
+			DeploymentContent="true"
 			>
 		</File>
 	</Files>
